[package]
name = "simpl"
version = "1.0.0"
authors = ["don <d.rasiukevicius@labdigital.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
toml = "0.5.4"
serde = { version = "1.0.102", features = ["derive"] }
dirs = "2.0.2"
dialoguer = "0.4.0"
colored = "1.8.0"
simplicate = { git = "https://github.com/fliepeltje/simplicate-rs" }
prettytable-rs = "0.8.0"
chrono = "0.4.9"
